objects/Work_Request__c.object
<CustomObject>
    <description>Module to store work request generated by managed services team and submitted by client back to managed services team</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>System Use: To link account with work request which are generated by managed services team</description>
        <inlineHelpText>System Use: To link account with work request which are generated by managed services team</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Requests Generated</relationshipLabel>
        <relationshipName>Work_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Candidate_Field_Configuration__c</fullName>
        <label>Candidate Field Configuration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Candidate_Limit_Reached__c</fullName>
        <formula>if(Job__r.Is_GCSC_Opp__c,0,No_of_Participant_Created__c - Candidate_Requested_Backend_Use__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Limit Reached</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Candidate_Request_Type_Backend_Use__c</fullName>
        <description>This field is for backend use only</description>
        <label>Candidate Request Type (Backend Use)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Requested_Backend_Use__c</fullName>
        <label>Candidate Requested (Backend Use)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Candidate_Template_Instructions__c</fullName>
        <label>Candidate Template Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Report_View_Link__c</fullName>
        <label>Client Report View Link</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Submitted_WRF_Preview__c</fullName>
        <inlineHelpText>Click this link to see the snapshot of what customer/internal team has submitted for this work request.</inlineHelpText>
        <label>Submitted Preview URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Cloned_From__c</fullName>
        <label>Cloned From</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deadline_Date__c</fullName>
        <label>Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_Configuration__c</fullName>
        <label>Field Configuration</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>System Use: To mark work request as active or inactive</description>
        <inlineHelpText>System Use: To mark work request as active or inactive</inlineHelpText>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Id_System_Used__c</fullName>
        <description>This field is used to store JobID of generated WRFs</description>
        <label>Job Id (System Used)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>System Use: To link job from where the work requests will be processed</description>
        <inlineHelpText>System Use: To link job from where the work requests will be processed</inlineHelpText>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Work Requests Submitted</relationshipLabel>
        <relationshipName>Work_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_Expiry_Date__c</fullName>
        <description>System Use: To capture the link expiry date of work request</description>
        <inlineHelpText>System Use: To capture the link expiry date of work request</inlineHelpText>
        <label>Request Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Link_Generated_Date__c</fullName>
        <description>System Use: To capture the link generated date of work request</description>
        <inlineHelpText>System Use: To capture the link generated date of work request</inlineHelpText>
        <label>Generated On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_Candidate_Limit__c</fullName>
        <description>System Use: For capturing number of candidates requested by client under work request.</description>
        <inlineHelpText>System Use: For capturing number of candidates requested by client under work request.</inlineHelpText>
        <label>Max Candidate Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Candidate_Completed__c</fullName>
        <description>System Use: To capture the number of candidate completed the assessment under the work request</description>
        <inlineHelpText>System Use: To capture the number of candidate completed the assessment under the work request</inlineHelpText>
        <label>No. of Candidates Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Candidate_Created__c</fullName>
        <description>System Use: To capture the total number of canidates created from work request submission</description>
        <inlineHelpText>System Use: To capture the total number of canidates created from work request submission</inlineHelpText>
        <label>No. of Candidates Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Candidate_Requested__c</fullName>
        <label>No. of Candidate Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Candidates_Uploaded__c</fullName>
        <description>System Use: To capture the number of candidate uploaded from client repsonse.</description>
        <inlineHelpText>System Use: To capture the number of candidate uploaded from client repsonse.</inlineHelpText>
        <label>No. of Candidates Uploaded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Participant_Created__c</fullName>
        <label>No. of Participant Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Participant_Requested__c</fullName>
        <label>No. of Participant Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_WR_submitted__c</fullName>
        <description>System Use: to capture total number work requests submitted</description>
        <inlineHelpText>System Use: to capture total number work requests submitted</inlineHelpText>
        <label>No. of WR submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Assessment__c</fullName>
        <label>Product/Assessment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Candidates_Job_Level__c</fullName>
        <formula>Job__r.Solution_Cap__c-Job__r.Number_of_Participants_New__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Candidates (Job Level)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Candidates__c</fullName>
        <formula>No_of_Participant_Requested__c -  No_of_Participant_Created__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Candidates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requestor_Email__c</fullName>
        <description>Reporting Only: To capture email of client who submitted the work request</description>
        <inlineHelpText>Reporting Only: To capture email of client who submitted the work request</inlineHelpText>
        <label>Requestor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Requestor_Name__c</fullName>
        <description>Reporting: For capturing user&apos;s name who requested the work request.</description>
        <inlineHelpText>Reporting: For capturing user&apos;s name who requested the work request.</inlineHelpText>
        <label>Requestor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Used__c</fullName>
        <description>Reporting: to define the system used for which work request is generated</description>
        <inlineHelpText>Reporting: to define the system used for which work request is generated</inlineHelpText>
        <label>System Used</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TalentCentral+</fullName>
                </value>
                <value>
                    <fullName>TalentCentral</fullName>
                </value>
                <value>
                    <fullName>SHL 360</fullName>
                </value>
                <value>
                    <fullName>Insights</fullName>
                </value>
                <value>
                    <fullName>VADC</fullName>
                </value>
                <value>
                    <fullName>SIOD</fullName>
                </value>
                <value>
                    <fullName>TalentCentral and 360</fullName>
                </value>
                <value>
                    <fullName>TalentCentral+ and 360</fullName>
                </value>
                <value>
                    <fullName>Insights and 360</fullName>
                </value>
                <value>
                    <fullName>TalentCentral and VADC</fullName>
                </value>
                <value>
                    <fullName>TalentCentral+ and VADC</fullName>
                </value>
                <value>
                    <fullName>TalentCentral and SIOD</fullName>
                </value>
                <value>
                    <fullName>TalentCentral, 360 and Insights</fullName>
                </value>
                <value>
                    <fullName>TalentCentral+, 360 and Insights</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_Under_Logo__c</fullName>
        <label>Text Under Logo</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>WRF_Client_Name__c</fullName>
        <label>WRF Client Name</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WRF_Link_Generated_for_Client__c</fullName>
        <description>User view on job level under each WRF submitted</description>
        <formula>if(ISBLANK(Cloned_From__c),WRF_Link__c,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Use this link in case customer has lost/forgotten the link they used for submitting this WRF.</inlineHelpText>
        <label>Generated URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WRF_Link__c</fullName>
        <description>System Use : To capture the link for work reqest generated by MS and sent over to client</description>
        <inlineHelpText>System Use : To capture the link for work reqest generated by MS and sent over to client</inlineHelpText>
        <label>WRF Link for Client</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Work_Request_Generated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>System Use: To link all work request submitted to the work request from which it is generated</description>
        <inlineHelpText>System Use: To link all work request submitted to the work request from which it is generated</inlineHelpText>
        <label>Work Request Generated</label>
        <referenceTo>Work_Request__c</referenceTo>
        <relationshipLabel>Submitted Work Requests</relationshipLabel>
        <relationshipName>Work_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Request_Type__c</fullName>
        <description>System Use: To define the type of work request whether it is generated by MS or submitted by Client</description>
        <inlineHelpText>System Use: To define the type of work request whether it is generated by MS or submitted by Client</inlineHelpText>
        <label>Work Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MS Generated</fullName>
                </value>
                <value>
                    <fullName>Client Submitted</fullName>
                </value>
                <value>
                    <fullName>Internal Submission</fullName>
                </value>
                <value>
                    <fullName>Client Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bulkJobId__c</fullName>
        <label>bulkJobId</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Work Request</label>
    <listViews>
        <fullName>All_WRFs</fullName>
        <columns>NAME</columns>
        <columns>Work_Request_Type__c</columns>
        <columns>Work_Request_Generated__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All WRFs</label>
    </listViews>
    <nameField>
        <displayFormat>WR-{0000}</displayFormat>
        <label>Work Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Requests</pluralLabel>
    <recordTypes>
        <fullName>Generated</fullName>
        <active>true</active>
        <description>To mark records as Generated which are MS generated work request URL</description>
        <label>Generated</label>
    </recordTypes>
    <recordTypes>
        <fullName>Submitted</fullName>
        <active>true</active>
        <description>To mark records as Generated which are MS submitted on behalf fof client or directly submitted by client.</description>
        <label>Submitted</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Restrict_Product_Assessment_For_MFS</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISPICKVAL(Work_Request_Type__c , &apos;Client Submitted&apos;),
							ISPICKVAL(Work_Request_Type__c , &apos;Internal Submission&apos;)
							),
				NOT(ISNEW()),
				$Profile.Name != &apos;System Administrator&apos;, 
				CONTAINS(TEXT(System_Used__c) , &apos;360&apos;),
				ISCHANGED(Product_Assessment__c), 
				NOT(OR(CONTAINS(UPPER(Product_Assessment__c), &apos;SHL 360&apos;),
										CONTAINS(UPPER(Product_Assessment__c), &apos;NOMINATION&apos;),
										CONTAINS(UPPER(Product_Assessment__c), &apos;ENGAGEMENT&apos;)
										)
							)  
				)</errorConditionFormula>
        <errorDisplayField>Product_Assessment__c</errorDisplayField>
        <errorMessage>For 360 System, Product/Assessment should have one of the following: SHL 360, Nomination, or Engagement.</errorMessage>
    </validationRules>
</CustomObject>